--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ data/filtered_utterances.json
 
 # Data file is too large, use samples for reference
 data/news_dialogue.json
+data/filtered_utterances.json
