model benchmark ipynb

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@
 # Personal conda info
 .conda_info
 
+pyauth.py
+
 # Data file is too large, use samples for reference
 data/news_dialogue.json
 data/filtered_utterances.json
