--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ pyauth.py
 # Data file is too large, use samples for reference
 data/news_dialogue.json
 data/filtered_utterances.json
+*data/models
