gitignore excludes large files

--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,8 @@ pyauth.py
 # Data file is too large, use samples for reference
 data/news_dialogue.json
 data/filtered_utterances.json
-data/contextual_embeddings_with_metadata.h5*data/models
+data/contextual_embeddings_with_metadata.h5
+*data/models
 *data/logs
 *data/results
 *data/weighted_checkpoints
