updated commit to ignore contextual_embeddings with metadata

--- a/.gitignore
+++ b/.gitignore
@@ -48,9 +48,18 @@ pyauth.py
 data/news_dialogue.json
 data/filtered_utterances.json
 data/contextual_embeddings_with_metadata.h5
-*data/pragmatic_markers_model
-*data/models
-*data/logs
-*data/results
-*data/weighted_checkpoints
-*data/unique_checkpoints
+
+# Ignore specific data files
+data/news_dialogue.json
+data/filtered_utterances.json
+
+# Ignore a specific HDF5 data file
+data/contextual_embeddings_with_metadata.h5
+
+# Ignore directories
+data/pragmatic_markers_model/
+data/models/
+data/logs
+data/results
+data/weighted_checkpoints
+data/unique_checkpoints
